added to do checkout self

--- a/ado-pipeline/infra-pipeline-with-approvers.yml
+++ b/ado-pipeline/infra-pipeline-with-approvers.yml
@@ -39,6 +39,7 @@ stages:
   variables:
   - group: env-prod
   jobs:
+  - checkout: self
   - deployment:
     displayName: Terraform Apply
     environment: Prod-Approvers
@@ -48,4 +49,5 @@ stages:
         deploy:
           steps:
           - template: pipeline-templates/terraform-apply.yaml
+
       
