checkout step changed

--- a/ado-pipeline/infra-pipeline-with-approvers.yml
+++ b/ado-pipeline/infra-pipeline-with-approvers.yml
@@ -48,6 +48,7 @@ stages:
       runOnce:
         deploy:
           steps:
+          - checkout: self
           - template: pipeline-templates/terraform-apply.yaml
 
       
