--- a/ado-pipeline/pipeline.yaml
+++ b/ado-pipeline/pipeline.yaml
@@ -33,13 +33,19 @@ stages:
     steps:
     - template: pipeline-templates/dotnet-deployment.yaml
 
-- stage: ProdD
+- stage: ProdCD
   dependsOn: DevCD
   pool:
     vmImage: 'windows-latest'
   variables:
   - group: env-prod
   jobs:
-  - job: Deploy  
-    steps:
-    - template: pipeline-templates/dotnet-deployment.yaml
+  - deployment:
+    displayName: Deploy
+    environment: Prod-Approvers
+    timeoutInMinutes: 180
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - template: pipeline-templates/dotnet-deployment.yaml
